[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/sisilicon.shaders.extended-shader/Hack_Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/sisilicon.shaders.extended-shader/ExtShaderTextEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/sisilicon.shaders.extended-shader/ExtShaderEditor.gd" type="Script" id=3]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/LinkButton.svg-96e2a2a61b36089f4dd20262a35d87c6.stex"

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 27.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.15, 0.1725, 0.2325, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.125, 0.14375, 0.19375, 1 )

[sub_resource type="DynamicFont" id=5]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 1 )

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 204, 204, 204, 0, 223, 223, 223, 0, 223, 223, 223, 0, 204, 204, 204, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 204, 204, 204, 0, 204, 204, 204, 10, 223, 223, 223, 186, 223, 223, 223, 186, 204, 204, 204, 10, 204, 204, 204, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 169, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 169, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 222, 222, 222, 117, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 117, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 220, 220, 220, 67, 223, 223, 223, 251, 223, 223, 223, 252, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 252, 223, 223, 223, 251, 220, 220, 220, 67, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 32, 223, 223, 223, 236, 223, 223, 223, 254, 222, 222, 222, 119, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 119, 223, 223, 223, 254, 223, 223, 223, 235, 223, 223, 223, 32, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 193, 223, 223, 223, 254, 223, 223, 223, 172, 222, 222, 222, 0, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 0, 223, 223, 223, 172, 223, 223, 223, 254, 223, 223, 223, 193, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 178, 223, 223, 223, 192, 208, 208, 208, 11, 215, 215, 215, 0, 223, 223, 223, 254, 223, 223, 223, 254, 215, 215, 215, 0, 208, 208, 208, 11, 223, 223, 223, 192, 223, 223, 223, 177, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 0, 208, 208, 208, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 208, 208, 208, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 179, 223, 223, 223, 179, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 167, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 167, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 167, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 167, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=7]
flags = 0
flags = 0
image = SubResource( 6 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 167, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 167, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 167, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 167, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 179, 223, 223, 223, 179, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 208, 208, 208, 0, 223, 223, 223, 0, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 0, 208, 208, 208, 0, 222, 222, 222, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 178, 222, 222, 222, 191, 208, 208, 208, 11, 215, 215, 215, 0, 223, 223, 223, 254, 223, 223, 223, 254, 215, 215, 215, 0, 208, 208, 208, 11, 222, 222, 222, 191, 223, 223, 223, 177, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 195, 223, 223, 223, 254, 223, 223, 223, 169, 222, 222, 222, 0, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 0, 223, 223, 223, 169, 223, 223, 223, 254, 223, 223, 223, 195, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 218, 218, 218, 0, 218, 218, 218, 35, 223, 223, 223, 237, 223, 223, 223, 254, 222, 222, 222, 117, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 118, 223, 223, 223, 254, 223, 223, 223, 237, 218, 218, 218, 35, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 222, 222, 222, 71, 223, 223, 223, 252, 223, 223, 223, 251, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 251, 223, 223, 223, 252, 222, 222, 222, 71, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 122, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 254, 223, 223, 223, 122, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 174, 223, 223, 223, 254, 223, 223, 223, 254, 222, 222, 222, 174, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 212, 212, 212, 0, 212, 212, 212, 12, 223, 223, 223, 187, 223, 223, 223, 187, 212, 212, 212, 12, 212, 212, 212, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 212, 212, 212, 0, 223, 223, 223, 0, 223, 223, 223, 0, 212, 212, 212, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=9]
flags = 0
flags = 0
image = SubResource( 8 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=10]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 85, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 222, 222, 222, 85, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 85, 223, 223, 223, 254, 223, 223, 223, 210, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 210, 223, 223, 223, 254, 222, 222, 222, 85, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 218, 218, 218, 0, 218, 218, 218, 21, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 209, 216, 216, 216, 20, 216, 216, 216, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 209, 224, 224, 224, 255, 223, 223, 223, 210, 218, 218, 218, 21, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 219, 219, 219, 0, 220, 220, 220, 22, 223, 223, 223, 210, 224, 224, 224, 255, 222, 222, 222, 207, 216, 216, 216, 20, 216, 216, 216, 20, 223, 223, 223, 208, 224, 224, 224, 255, 223, 223, 223, 210, 220, 220, 220, 22, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 212, 224, 224, 224, 255, 222, 222, 222, 207, 222, 222, 222, 207, 224, 224, 224, 255, 223, 223, 223, 211, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 213, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 212, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 210, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 210, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 209, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 209, 224, 224, 224, 255, 223, 223, 223, 210, 218, 218, 218, 21, 220, 220, 220, 22, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 208, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 216, 216, 216, 20, 222, 222, 222, 207, 224, 224, 224, 255, 223, 223, 223, 211, 220, 220, 220, 22, 219, 219, 219, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 211, 224, 224, 224, 255, 222, 222, 222, 207, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 85, 224, 224, 224, 255, 223, 223, 223, 212, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 223, 223, 223, 212, 224, 224, 224, 255, 222, 222, 222, 85, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 86, 220, 220, 220, 22, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 220, 220, 220, 22, 222, 222, 222, 86, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 220, 220, 220, 0, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=11]
flags = 0
flags = 0
image = SubResource( 10 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxEmpty" id=12]
content_margin_left = 4.0
content_margin_top = 3.0
content_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=14]
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=15]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 1 )

[node name="ExtShaderPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 40.0

[node name="Search" type="MenuButton" parent="VBoxContainer/Tools"]
margin_right = 54.0
margin_bottom = 40.0
group = SubResource( 1 )
text = "Search"
items = [ "Find", null, 0, false, false, 0, 0, null, "", false, "Find Next", null, 0, false, false, 1, 0, null, "", false, "Find Previous", null, 0, false, false, 2, 0, null, "", false, "Replace", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Goto Line", null, 0, false, false, 4, 0, null, "", false ]
switch_on_hover = true

[node name="Edit" type="MenuButton" parent="VBoxContainer/Tools"]
margin_left = 58.0
margin_right = 94.0
margin_bottom = 40.0
group = SubResource( 1 )
text = "Edit"
items = [ "Undo", null, 0, false, false, 5, 0, null, "", false, "Redo", null, 0, false, false, 6, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Cut", null, 0, false, false, 7, 0, null, "", false, "Copy", null, 0, false, false, 8, 0, null, "", false, "Paste", null, 0, false, false, 9, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Select All", null, 0, false, false, 10, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Move Up", null, 0, false, false, 11, 0, null, "", false, "Move Down", null, 0, false, false, 12, 0, null, "", false, "Indent Left", null, 0, false, false, 13, 0, null, "", false, "Indent Right", null, 0, false, false, 14, 0, null, "", false, "Delete Line", null, 0, false, false, 15, 0, null, "", false, "Toggle Comment", null, 0, false, false, 16, 0, null, "", false, "Clone Down", null, 0, false, false, 17, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Complete Symbol", null, 0, false, false, 18, 0, null, "", false ]
switch_on_hover = true

[node name="GoTo" type="MenuButton" parent="VBoxContainer/Tools"]
margin_left = 98.0
margin_right = 147.0
margin_bottom = 40.0
text = "Go To"
items = [ "Go To Line...", null, 0, false, false, 4, 0, null, "", false ]

[node name="Help" type="MenuButton" parent="VBoxContainer/Tools"]
margin_left = 151.0
margin_right = 193.0
margin_bottom = 40.0
text = "Help"
items = [ "Online Docs", SubResource( 2 ), 0, false, false, 19, 0, null, "", false, "Extended Shader Github", SubResource( 2 ), 0, false, false, 20, 0, null, "", false ]

[node name="AddInclude" type="MenuButton" parent="VBoxContainer/Tools"]
margin_left = 197.0
margin_right = 269.0
margin_bottom = 40.0
text = "Include..."

[node name="Functions" type="MenuButton" parent="VBoxContainer/Tools"]
margin_left = 273.0
margin_right = 359.0
margin_bottom = 40.0
text = "Functions..."

[node name="PrintFuncTable" type="ToolButton" parent="VBoxContainer/Tools"]
margin_left = 363.0
margin_right = 502.0
margin_bottom = 40.0
text = "Print Function Table"

[node name="Spacer" type="Control" parent="VBoxContainer/Tools"]
margin_left = 506.0
margin_right = 771.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="RawView" type="CheckButton" parent="VBoxContainer/Tools"]
margin_left = 775.0
margin_right = 1010.0
margin_bottom = 40.0
grow_horizontal = 0
text = "Raw Shader Output View"
flat = true
align = 2

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1010.0
margin_bottom = 558.0
size_flags_vertical = 3
custom_styles/read_only = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/safe_line_number_color = Color( 1, 0.0862745, 0.0862745, 1 )
custom_constants/line_spacing = 6
text = "/* [FAKE SHADER] If you see this in the editor, something has gone wrong! */
shader_type spatial;
/* This is
a multiline
comment!
*/
uniform float magic_number;
// this is a single line comment!
void fragment() {
	ALBEDO = vec3(1.0, 1.0, magic_number);
}"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
hiding_enabled = true
minimap_draw = true
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBar" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 549.0
margin_right = 1010.0
margin_bottom = 573.0

[node name="SearchField" type="VBoxContainer" parent="VBoxContainer/SearchBar"]
margin_right = 628.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Find" type="LineEdit" parent="VBoxContainer/SearchBar/SearchField"]
margin_right = 628.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
placeholder_text = "Find..."
caret_blink = true
caret_blink_speed = 0.5

[node name="Timer2" type="Timer" parent="VBoxContainer/SearchBar/SearchField/Find"]
wait_time = 0.2
one_shot = true

[node name="Replace" type="LineEdit" parent="VBoxContainer/SearchBar/SearchField"]
visible = false
margin_top = 28.0
margin_right = 633.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 0 )
placeholder_text = "Replace..."
caret_blink = true
caret_blink_speed = 0.5

[node name="Timer2" type="Timer" parent="VBoxContainer/SearchBar/SearchField/Replace"]
wait_time = 0.5
one_shot = true

[node name="MatchesPanel" type="VBoxContainer" parent="VBoxContainer/SearchBar"]
margin_left = 632.0
margin_right = 767.0
margin_bottom = 24.0

[node name="FindOptions" type="HBoxContainer" parent="VBoxContainer/SearchBar/MatchesPanel"]
margin_right = 135.0
margin_bottom = 24.0
alignment = 2

[node name="MatchesLabel" type="Label" parent="VBoxContainer/SearchBar/MatchesPanel/FindOptions"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.8, 0.8075, 0.8275, 1 )
text = "3 matches."

[node name="Previous" type="ToolButton" parent="VBoxContainer/SearchBar/MatchesPanel/FindOptions"]
margin_left = 75.0
margin_right = 103.0
margin_bottom = 24.0
focus_mode = 0
icon = SubResource( 7 )

[node name="Next" type="ToolButton" parent="VBoxContainer/SearchBar/MatchesPanel/FindOptions"]
margin_left = 107.0
margin_right = 135.0
margin_bottom = 24.0
focus_mode = 0
icon = SubResource( 9 )

[node name="ReplaceOptions" type="HBoxContainer" parent="VBoxContainer/SearchBar/MatchesPanel"]
visible = false
margin_top = 28.0
margin_right = 149.0
margin_bottom = 48.0
alignment = 2

[node name="Replace" type="Button" parent="VBoxContainer/SearchBar/MatchesPanel/ReplaceOptions"]
margin_right = 62.0
margin_bottom = 20.0
text = "Replace"

[node name="Replace All" type="Button" parent="VBoxContainer/SearchBar/MatchesPanel/ReplaceOptions"]
margin_left = 66.0
margin_right = 149.0
margin_bottom = 20.0
text = "Replace All"

[node name="Settings" type="VBoxContainer" parent="VBoxContainer/SearchBar"]
margin_left = 771.0
margin_right = 990.0
margin_bottom = 24.0

[node name="Main" type="HBoxContainer" parent="VBoxContainer/SearchBar/Settings"]
margin_right = 219.0
margin_bottom = 24.0

[node name="MatchCase" type="CheckBox" parent="VBoxContainer/SearchBar/Settings/Main"]
margin_right = 101.0
margin_bottom = 24.0
focus_mode = 0
text = "Match Case"

[node name="WholeWords" type="CheckBox" parent="VBoxContainer/SearchBar/Settings/Main"]
margin_left = 105.0
margin_right = 219.0
margin_bottom = 24.0
focus_mode = 0
text = "Whole Words"

[node name="Replace" type="HBoxContainer" parent="VBoxContainer/SearchBar/Settings"]
visible = false
margin_top = 28.0
margin_right = 219.0
margin_bottom = 52.0

[node name="SelectionOnly" type="CheckBox" parent="VBoxContainer/SearchBar/Settings/Replace"]
margin_right = 121.0
margin_bottom = 24.0
focus_mode = 0
text = "Selection Only"

[node name="CloseButton" type="TextureButton" parent="VBoxContainer/SearchBar"]
margin_left = 994.0
margin_top = 4.0
margin_right = 1010.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
size_flags_vertical = 4
texture_normal = SubResource( 11 )
texture_pressed = SubResource( 11 )
texture_hover = SubResource( 11 )

[node name="Timer" type="Timer" parent="VBoxContainer"]
one_shot = true

[node name="InfoBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 562.0
margin_right = 1010.0
margin_bottom = 586.0
alignment = 2

[node name="ErrorBar" type="Label" parent="VBoxContainer/InfoBar"]
margin_right = 930.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 0.470588, 0.419608, 1 )
text = "Error at line 2:"

[node name="Cursor" type="Label" parent="VBoxContainer/InfoBar"]
margin_left = 934.0
margin_right = 1010.0
margin_bottom = 24.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "(  0,  0)"
align = 2

[node name="Goto" type="Control" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 2

[node name="GotoLineDialog" type="WindowDialog" parent="Goto"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -53.0
margin_right = 109.0
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
window_title = "Go To Line"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Goto/GotoLineDialog"]
margin_left = 8.0
margin_top = 72.0
margin_right = 192.0
margin_bottom = 98.0

[node name="spacer" type="Control" parent="Goto/GotoLineDialog/Buttons"]
margin_right = 27.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="Goto/GotoLineDialog/Buttons"]
margin_left = 31.0
margin_right = 85.0
margin_bottom = 26.0
text = "Cancel"

[node name="spacer2" type="Control" parent="Goto/GotoLineDialog/Buttons"]
margin_left = 89.0
margin_right = 117.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="Ok" type="Button" parent="Goto/GotoLineDialog/Buttons"]
margin_left = 121.0
margin_right = 152.0
margin_bottom = 26.0
text = "OK"

[node name="spacer3" type="Control" parent="Goto/GotoLineDialog/Buttons"]
margin_left = 156.0
margin_right = 184.0
margin_bottom = 26.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="LineBox" type="VBoxContainer" parent="Goto/GotoLineDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineLabel" type="Label" parent="Goto/GotoLineDialog/LineBox"]
margin_right = 184.0
margin_bottom = 14.0
text = "Line Number:"

[node name="Line" type="LineEdit" parent="Goto/GotoLineDialog/LineBox"]
margin_top = 18.0
margin_right = 184.0
margin_bottom = 42.0
text = "0"
caret_blink = true
caret_blink_speed = 0.5

[connection signal="pressed" from="VBoxContainer/Tools/PrintFuncTable" to="VBoxContainer" method="_on_PrintFuncTable_pressed"]
[connection signal="toggled" from="VBoxContainer/Tools/RawView" to="VBoxContainer" method="_on_RawView_toggled"]
[connection signal="cursor_changed" from="VBoxContainer/TextEdit" to="VBoxContainer" method="_on_TextEdit_cursor_changed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="VBoxContainer" method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/SearchBar/SearchField/Find" to="VBoxContainer" method="_on_Find_text_changed"]
[connection signal="timeout" from="VBoxContainer/SearchBar/SearchField/Find/Timer2" to="VBoxContainer" method="_on_Find_Field_timeout"]
[connection signal="pressed" from="VBoxContainer/SearchBar/MatchesPanel/FindOptions/Previous" to="VBoxContainer" method="_on_Previous_pressed"]
[connection signal="pressed" from="VBoxContainer/SearchBar/MatchesPanel/FindOptions/Next" to="VBoxContainer" method="_on_Next_pressed"]
[connection signal="pressed" from="VBoxContainer/SearchBar/CloseButton" to="VBoxContainer" method="_on_CloseSearchButton_pressed"]
[connection signal="timeout" from="VBoxContainer/Timer" to="VBoxContainer" method="_on_Timer_timeout"]
[connection signal="pressed" from="Goto/GotoLineDialog/Buttons/Cancel" to="VBoxContainer" method="_on_Goto_Cancel_pressed"]
[connection signal="pressed" from="Goto/GotoLineDialog/Buttons/Ok" to="VBoxContainer" method="_on_Goto_Ok_pressed"]
